-
Type: Bug
-
Resolution: Fixed
-
Priority: Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Atlas Streams
-
Fully Compatible
-
ALL
-
Sprint 56
streams_kafka on enterprise-rhel-8-64-bit-dynamic-all-feature-flags
Host: i-0abb30a9494cc5db4
Project: mongodb-mongo-master
Commit: dc168ac4
Failing Test Logs:
Task Logs:
Mongo Shell Failed to Load
Logs:
Error: 0 is not greater than 1000 : { "name" : "kafkaToMongo-outputTopic1", "processorId" : "processor-topic_outputTopic1-to-coll_sinkColl1", "status" : "running", "scaleFactor" : NumberLong(1), "inputMessageCount" : NumberLong(1000), "inputMessageSize" : 744239, "outputMessageCount" : NumberLong(1000), "outputMessageSize" : 1451890, "dlqMessageCount" : NumberLong(0), "dlqMessageSize" : 0, "stateSize" : 0, "memoryTrackerBytes" : 0, "operatorStats" : [ { "name" : "KafkaConsumerOperator", "inputMessageCount" : NumberLong(1000), "inputMessageSize" : 744239, "outputMessageCount" : NumberLong(1000), "outputMessageSize" : 0, "dlqMessageCount" : NumberLong(0), "dlqMessageSize" : 0, "stateSize" : 0, "maxMemoryUsage" : 0, "executionTimeSecs" : NumberLong(0), "timeSpentMillis" : NumberLong(0) }, { "name" : "MergeOperator", "inputMessageCount" : NumberLong(1000), "inputMessageSize" : 713890, "outputMessageCount" : NumberLong(1000), "outputMessageSize" : 1451890, "dlqMessageCount" : NumberLong(0), "dlqMessageSize" : 0, "stateSize" : 0, "maxMemoryUsage" : 0, "executionTimeSecs" : NumberLong(0), "timeSpentMillis" : NumberLong(30) } ], "kafkaPartitions" : [ { "partition" : 0, "currentOffset" : NumberLong(1001), "checkpointOffset" : NumberLong(0), "partitionOffsetLag" : NumberLong(0) } ], "kafkaTotalOffsetLag" : NumberLong(0),
Mongo Shell Failed to Load
Logs:
2024-08-16T16:46:05.604Z assert: 0 is not greater than 1000 : { "name" : "kafkaToMongo-outputTopic1", "processorId" : "processor-topic_outputTopic1-to-coll_sinkColl1", "status" : "running", "scaleFactor" : NumberLong(1), "inputMessageCount" : NumberLong(1000), "inputMessageSize" : 744239, "outputMessageCount" : NumberLong(1000), "outputMessageSize" : 1451890, "dlqMessageCount" : NumberLong(0), "dlqMessageSize" : 0, "stateSize" : 0, "memoryTrackerBytes" : 0, "operatorStats" : [ { "name" : "KafkaConsumerOperator", "inputMessageCount" : NumberLong(1000), "inputMessageSize" : 744239, "outputMessageCount" : NumberLong(1000), "outputMessageSize" : 0, "dlqMessageCount" : NumberLong(0), "dlqMessageSize" : 0, "stateSize" : 0, "maxMemoryUsage" : 0, "executionTimeSecs" : NumberLong(0), "timeSpentMillis" : NumberLong(0) }, { "name" : "MergeOperator", "inputMessageCount" : NumberLong(1000), "inputMessageSize" : 713890, "outputMessageCount" : NumberLong(1000), "outputMessageSize" : 1451890, "dlqMessageCount" : NumberLong(0), "dlqMessageSize" : 0, "stateSize" : 0, "maxMemoryUsage" : 0, "executionTimeSecs" : NumberLong(0), "timeSpentMillis" : NumberLong(30) } ], "kafkaPartitions" : [ { "partition" : 0, "currentOffset" : NumberLong(1001), "checkpointOffset" : NumberLong(0), "partitionOffsetLag" : NumberLong(0) } ], "kafkaTotalOffsetLag" : NumberLong(0),
Repro Artifacts: