SERVER-93962: Track max memory usage correctly in KafkaParitionConsumer. (#26454)

`KafkaPartitionConsumer` was not tracking memory usage in a long-lived
stats object. This caused it only report instantaneous max memory usage
as of `getStats()` call and not the true max memory usage over its
lifetime. To fix this issue, making KafkaPartitionConsumer track its
memory usage in an `OperatorStats` member variable exactly how
`ChangeStreamSourceOperator` does it.